# snakia

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: docs-publish.yml  pylint.yml  pypi-publish.yml
docs/source/: api.rst  conf.py  index.rst
examples/: health_plugin.py  tui.py
src/snakia/: __init__.py
src/snakia/core/: engine.py  except_manager.py
src/snakia/core/ecs/: __init__.py  component.py  processor.py  system.py
src/snakia/core/es/: __init__.py  action.py  dispatcher.py  event.py  filter.py  handler.py  subscriber.py
src/snakia/core/loader/: __init__.py  loadable.py  loader.py  meta.py  plugin.py  plugin_processor.py
src/snakia/core/rx/: __init__.py  async_bindable.py  base_bindable.py  bindable.py  chain.py  combine.py  concat.py  cond.py  const.py  filter.py  (+2 more)
src/snakia/decorators/: __init__.py  inject_after.py  inject_before.py  inject_const.py  inject_replace.py  pass_exceptions.py  singleton.py
src/snakia/field/: __init__.py  auto.py  bool.py  field.py  float.py  int.py  str.py  t.py
src/snakia/platform/: __init__.py  android.py  freebsd.py  ios.py  layer.py  linux.py  macos.py  os.py  windows.py
src/snakia/property/: __init__.py  cell_property.py  classproperty.py  hook_property.py  initonly.py  priv_property.py  property.py  readonly.py
src/snakia/random/: __init__.py  os.py  python.py  random.py
src/snakia/types/: __init__.py  color.py  empty.py  unique.py  unset.py  version.py
src/snakia/utils/: __init__.py  frame.py  gil_enabled.py  inherit.py  nolock.py  this.py  throw.py  to_async.py
(+14 files in other folders)
