[project]
name = "snakia"
version = "0.4.0"
description = "Modern python framework"
readme = "README.md"
authors = [
    { name = "rus07tam", email = "rus07tam@gmail.com" }
]
keywords = ["python3", "event system", "ecs", "reactive programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2",
    "pydantic>=2.12.3",
]
license = "CC0-1.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/ruject/snakia"
Repository = "https://github.com/ruject/snakia"
"Issue Tracker" = "https://github.com/ruject/snakia/issues"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.pylint.'master']
init-hook = "import sys; sys.path.append('.venv/lib/python3.12/site-packages')"
disable = ["C0114", "C0115", "C0116", "R0801"]
max-args = 8
max-positional-arguments = 7
min-public-methods = 1
fail-on = "error"